--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <main>
+    <main id="home">
       <header class="fixed-header">
         <div class="content">
           <!-- Navbar -->
@@ -29,11 +29,11 @@
             </a>
             <!-- Navigation -->
             <ul>
-              <li><a href="#!">Home</a></li>
-              <li><a href="#!">Features</a></li>
-              <li><a href="#!">Services</a></li>
-              <li><a href="#!">Resources</a></li>
-              <li><a href="#!">Contact</a></li>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#features">Features</a></li>
+              <li><a href="#resources">Resources</a></li>
+              <li><a href="#contact">Contact</a></li>
             </ul>
 
             <!-- Action -->
@@ -76,7 +76,7 @@
             <img src="./assets/img/logo.svg" alt="Besnik." />
 
             <!-- Stars -->
-            <div class="stars">
+            <div id="resources" class="stars">
               <img src="./assets/img/star.svg" alt="Star" />
               <img src="./assets/img/star.svg" alt="Star" />
               <img src="./assets/img/star.svg" alt="Star" />
@@ -109,7 +109,7 @@
       </div>
 
       <!-- Guides -->
-      <div class="guides">
+      <div id="services" class="guides">
         <div class="content">
           <h2 class="sub-title">How its works?</h2>
           <p class="desc">
@@ -163,7 +163,7 @@
         </div>
       </div>
       <!-- Featured -->
-      <div class="featured">
+      <div id="features" class="featured">
         <div class="content">
           <header>
             <h2 class="sub-title">Featured Properties</h2>
@@ -434,7 +434,7 @@
       </div>
 
       <!-- Subscription -->
-      <div class="subscription">
+      <div id="contact" class="subscription">
         <div class="content">
           <div class="body">
             <div class="info">
